--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,10 +1,7 @@
 {
   "printWidth": 120,
-  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "parser": "babylon",
-  "semi": true
+  "jsxBracketSameLine": true,
+  "parser": "babylon"
 }
